cmake_minimum_required(VERSION 3.19.2)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../)

set(LIBCPP_VERSION_MAJOR 1)
set(LIBCPP_VERSION_MINOR 0)
set(LIBCPP_VERSION_PATCH 0)
set(LIBCPP_FETCH_WAY git)
set(LIBCPP_FETCH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/libcpp)
set(LIBCPP_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/libcpp)
include(FindFetchLibcpp)

# set(BOOST_VERSION_MAJOR 1)
# set(BOOST_VERSION_MINOR 75)
# set(BOOST_VERSION_PATCH 0)
# # find_package(Boost)
# # if(NOT Boost_FOUND OR 
# #     NOT "${BOOST_VERSION_MAJOR}.${BOOST_VERSION_MINOR}.${BOOST_VERSION_PATCH}" STREQUAL ${Boost_VERSION})
# #     set(BOOST_FETCH_WAY https)
# #     set(BOOST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/boost)
# #     set(Boost_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/boost)
# #     set(Boost_LIBRARY_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/../deps/lib)
# #     include(FindFetchBoost)
# # endif()

# set(BOOST_FETCH_WAY https)
# set(BOOST_FETCH_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../3rd/boost)
# set(BOOST_STAGEDIR ${CMAKE_CURRENT_SOURCE_DIR}/../deps/lib)
# set(BOOST_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/../deps/include/boost)
# include(FindFetchBoost)

# find_package(ZeroMQ)
# if(NOT ZeroMQ_FOUND)
#     set(LIBZMQ_VERSION 4.3.4)
#     set(LIBZMQ_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rd/zeromq)
#     include(FindFetchLibzmq)

#     set(ZMQPP_VERSION 4.2.0)
#     set(ZMQPP_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rd/zmqpp)
#     include(FindFetchZmqpp)
# endif()

# find_package(spdlog)
# if(NOT spdlog_FOUND)
#     set(SPDLOG_FETCH_WAY git)
#     set(SPDLOG_VERSION 1.11.0)
#     set(SPDLOG_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rd/spdlog)
#     include(FindFetchSpdlog)
# endif()

# #find_package(XTP)
# #if(NOT XTP_FOUND)
# #    set(XTP_FETCH_WAY https)
# #    set(XTP_VERSION 2.2.33.5)
# #    set(XTP_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rd/XTP)
# #    include(FindFetchXtp)
# #endif()

# find_package(GTest)
# if(NOT GTest_FOUND)
#     set(GTEST_FETCH_WAY https)
#     set(GTEST_VERSION 1.14.0)
#     set(GTEST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rd/googletest)
#     include(FindFetchGTest)
# endif()

# find_package(Eigen3)
# if(NOT Eigen3_FOUND)
#     set(EIGEN3_FETCH_WAY git)
#     set(EIGEN3_VERSION 3.4)
#     set(EIGEN3_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rd/eigen3)
#     include(FindFetchEigen3)
# endif()

# find_package(TBB)
# if(NOT TBB_FOUND)
#     set(TBB_FETCH_WAY https)
#     set(TBB_VERSION 2021.11.0)
#     set(TBB_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/3rd/oneTBB)
#     include(FindFetchTBB)
# endif()